[gd_scene load_steps=25 format=3 uid="uid://ckbsjqfpf8k47"]

[ext_resource type="Script" uid="uid://bdacjj2m7gjth" path="res://characters/player.gd" id="1_4rspn"]
[ext_resource type="AudioStream" uid="uid://ducsdqbfgw1np" path="res://characters/sonic/sounds/jump.mp3" id="1_svrv0"]
[ext_resource type="AudioStream" uid="uid://bavuwgt46s5pc" path="res://characters/sonic/sounds/spindash_release.mp3" id="2_4rspn"]
[ext_resource type="PackedScene" uid="uid://c14ux88uvqxm" path="res://characters/exetior/exetior.tscn" id="2_hsn1j"]
[ext_resource type="AudioStream" uid="uid://bf5qo2oncewdg" path="res://characters/sonic/sounds/Rush.wav" id="3_hsn1j"]
[ext_resource type="AudioStream" uid="uid://bqstirama3j28" path="res://characters/sonic/sounds/spindash_charge.mp3" id="4_dx8gg"]
[ext_resource type="AudioStream" uid="uid://b3cw0qshqhjbn" path="res://characters/sonic/sounds/roll.mp3" id="5_qp1es"]
[ext_resource type="AudioStream" uid="uid://cgjy4i5wu6veo" path="res://characters/sonic/sounds/skid.mp3" id="6_qk7w8"]
[ext_resource type="AudioStream" uid="uid://dugss15cfjotl" path="res://characters/sonic/sounds/DeathSound.mp3" id="7_3t8uj"]
[ext_resource type="AudioStream" uid="uid://xb8x574wioor" path="res://characters/sonic/sounds/rings_lose.mp3" id="8_rjhu2"]
[ext_resource type="AudioStream" uid="uid://blytu1vcq2qux" path="res://sounds/ExetiorLaugh.wav" id="9_lit6r"]
[ext_resource type="Script" uid="uid://6e4jhb08es6g" path="res://characters/states/state_machine.gd" id="10_ys5vl"]
[ext_resource type="Script" uid="uid://b2dsridkxnl3a" path="res://characters/states/idle.gd" id="11_3y70i"]
[ext_resource type="Script" uid="uid://dc48ht0om358f" path="res://characters/states/run.gd" id="12_mjkfq"]
[ext_resource type="Script" uid="uid://clmmg3ey5tjis" path="res://characters/states/jump.gd" id="13_5f4cm"]
[ext_resource type="Script" uid="uid://c3sogkry4drfd" path="res://characters/states/roll.gd" id="14_d3tvb"]
[ext_resource type="Script" uid="uid://2qdji157mifw" path="res://characters/states/spindash.gd" id="15_nbheu"]
[ext_resource type="Script" uid="uid://cal5d1k7qjrl5" path="res://characters/states/skid.gd" id="16_5mswt"]
[ext_resource type="Script" uid="uid://bf1xjicg4mni5" path="res://characters/states/crouch.gd" id="17_o8c8i"]
[ext_resource type="Script" uid="uid://cu251fw58uxku" path="res://characters/states/hurt.gd" id="18_akagt"]
[ext_resource type="Script" uid="uid://bwr0rw25fikpx" path="res://characters/states/dead.gd" id="19_cbb7d"]
[ext_resource type="Script" uid="uid://dhbbop3ihyokd" path="res://characters/states/look_up.gd" id="20_xvpab"]
[ext_resource type="Script" uid="uid://bqd6ff8w53021" path="res://characters/states/fly.gd" id="21_6mya6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rspn"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4rspn")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Node2D" parent="SpriteHolder" instance=ExtResource("2_hsn1j")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("10_ys5vl")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("11_3y70i")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("12_mjkfq")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("13_5f4cm")

[node name="Roll" type="Node" parent="StateMachine"]
script = ExtResource("14_d3tvb")

[node name="Spindash" type="Node" parent="StateMachine"]
script = ExtResource("15_nbheu")

[node name="Skid" type="Node" parent="StateMachine"]
script = ExtResource("16_5mswt")

[node name="Crouch" type="Node" parent="StateMachine"]
script = ExtResource("17_o8c8i")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("18_akagt")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("19_cbb7d")

[node name="LookUp" type="Node" parent="StateMachine"]
script = ExtResource("20_xvpab")

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource("21_6mya6")

[node name="HitBox" type="CollisionShape2D" parent="."]
scale = Vector2(18, 38)
shape = SubResource("RectangleShape2D_4rspn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -0.5)
zoom = Vector2(2.6, 2.6)
limit_left = 0
limit_top = -999999
position_smoothing_speed = 2.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_vertical_offset = -0.48

[node name="Shields" type="Sprite2D" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="Jump_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("1_svrv0")
volume_db = -12.0

[node name="spindash_roll_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("2_4rspn")
volume_db = -12.0

[node name="speed_chute_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_hsn1j")
volume_db = -12.0

[node name="spindash_charge_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_dx8gg")
volume_db = -12.0

[node name="roll_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_qp1es")
volume_db = -12.0

[node name="skid_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_qk7w8")
volume_db = -12.0

[node name="death_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_3t8uj")
volume_db = 1.0

[node name="scatter_rings_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_rjhu2")
volume_db = -12.0

[node name="emotion_sound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_lit6r")

[node name="CollisionShapes" type="Node" parent="."]

[node name="SurfaceDetectors" type="Node" parent="."]

[node name="FrontSurfaceDetector" type="RayCast2D" parent="SurfaceDetectors"]
position = Vector2(25, 0)

[node name="RearSurfaceDetector" type="RayCast2D" parent="SurfaceDetectors"]
position = Vector2(-25, 0)
